<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quanergy_client_ros</name>
  <version>4.0.2</version>
  <description>The quanergy_client_ros package provides a ROS driver for Quanergy sensors</description>

  <maintainer email="ross.taylor@quanergy.com">Ross Taylor</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">pcl_ros</depend>
  <depend condition="$ROS_VERSION == 2">pcl_conversions</depend>
  <depend>quanergy_client</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
